--- a/review.html
+++ b/review.html
@@ -6,7 +6,7 @@
         <meta name="description" content="This is a page for WDD131">
         <meta name="author" content="Caitlin Evans">
         <title>Caitlin Evans | WDD 131</title>
-        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/review.css">
     </head>
     <body>
 
