--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="author" content="Caitlin Evans">
     <title>WDD 131 - Dynamic Web Fundamentals | Caitlin Evans</title>
     <link rel="stylesheet" href="styles/base.css">
+    <!-- GOOGLE FONTS PRECONNECT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
