add defer and move script to head for audit

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!-- GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
+    <script defer="true" src="scripts/getdates.js"></script>
 </head>
 <body>
 
@@ -58,7 +59,5 @@
             <p>Date Last Modified: <span id="last-modified"></span></p>
         </footer>
     </div>
-
-    <script src="scripts/getdates.js"></script>
 </body>
 </html>
