--- a/week02/temples.html
+++ b/week02/temples.html
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Temple Photo Album</h1>
+            <h1>Temple Album</h1>
             <button id="menu" aria-label="Toggle menu">☰</button>
             <nav aria-label="Main Navigation">
                 <ul>
