assignment links update

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
                     <li><a href="#">Smashing Magazine</a></li>
                     <li><a href="#">W3 Schools</a></li>
                 </ul>
+                <h3>Assignment Links</h3>
+                <h4>Week 02</h4>
+                <ul>
+                    <li><a href="/week02/bom.html">BOM</a></li>
+                    <li><a href="/week02/media-query.html">Media Query</a></li>
+                    <li><a href="/week02/temples.html">Temple Gallery</a></li>
+                </ul>
             </aside>
         </main>
         <footer>
