--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
                 <h3>Quick Links & Resources</h3>
                 <ul>
                     <li><a href="#">Web Development Community</a></li>
-                    <li><a href="#">CSS Tricks</a></li>
-                    <li><a href="#">Smashing Magazine</a></li>
-                    <li><a href="#">W3 Schools</a></li>
+                    <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+                    <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
+                    <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+                    <li><a href="https://www.w3.org/TR/WCAG22/">W3C Accessibility for 2.2</a></li>
+                    
                 </ul>
                 <h3>Assignment Links</h3>
                 <h4>Week 02</h4>
