--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <h3>Assignment Links</h3>
                 <h4>Week 02</h4>
                 <ul>
-                    <li><a href="/week02/bom.html">BOM</a></li>
-                    <li><a href="/week02/media-query.html">Media Query</a></li>
-                    <li><a href="/week02/temples.html" >Temple Gallery</a></li>
+                    <li><a href="https://caitlinmevans.github.io/wdd131/week02/bom.html" target="_blank">BOM</a></li>
+                    <li><a href="https://caitlinmevans.github.io/wdd131/week02/media-query.html" target="_blank">Media Query</a></li>
+                    <li><a href="https://caitlinmevans.github.io/wdd131/week02/temples.html" target="_blank" >Temple Gallery</a></li>
                 </ul>
             </aside>
         </main>
