github directory specs

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -32,51 +32,51 @@
         <main>
             <div class="temple-grid">
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
                 <figure>
-                    <img src="/images/payson-temple.jpg" alt="Payson Utah Temple">
+                    <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
                     <figcaption>Payson Utah Temple</figcaption>
                 </figure>
             </div>
