--- a/week02/temples.html
+++ b/week02/temples.html
@@ -30,6 +30,7 @@
             </nav>
         </header>
         <main>
+            <h2>My Favorite Temples</h2>
             <div class="temple-grid">
                 <figure>
                     <img src="../images/payson-temple.jpg" alt="Payson Utah Temple">
