--- a/temples.html
+++ b/temples.html
@@ -6,8 +6,8 @@
     <meta name="description" content="This is a page for temple image gallery">
     <meta name="author" content="Caitlin Evans">
     <title>WDD 131 - Dynamic Web Fundamentals | Caitlin Evans</title>
-    <link rel="stylesheet" href="/week02/styles/temples.css">
-    <link rel="stylesheet" href="/week02/styles/temples-large.css">
+    <link rel="stylesheet" href="../wdd131/week02/styles/temples.css">
+    <link rel="stylesheet" href="../wdd131/week02/styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap" rel="stylesheet">
