--- a/week02/temples.html
+++ b/week02/temples.html
@@ -1,3 +1,4 @@
+<!-- Having this in the weeok02 direcotry caused issues for the eval tool. recreated in main direcotry. submit both links for credit.. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
