add finished activity

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                     <li><a href="../wdd131/week02/media-query.html" target="_blank">Media Query</a></li>
                     <li><a href="../wdd131/week02/temples.html" target="_blank" >Temple Gallery</a></li>
                 </ul>
+                <h4>Week 03</h4>
+                <ul>
+                    <li><a href="../wdd131/week03/design.html" target="_blank">Design</a></li>
+
+                </ul>
             </aside>
         </main>
         <footer>
