--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <h4>Week 03</h4>
                 <ul>
                     <li><a href="../wdd131/week03/design.html" target="_blank">Design</a></li>
-
+                    <li><a href="https://codepen.io/CaitlinMEvans/pen/PoMgqOa">Psuedo-Classes on Code Pen</a></li>
+                    <li><a href="https://codepen.io/CaitlinMEvans/pen/BaXENrq">Psuedo-Elements on Code Pen</a></li>
+                    <li><a href="../wdd131/week03/responsive-images.html" target="_blank"></a>Responsive Images</li>
                 </ul>
             </aside>
         </main>
