--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <li><a href="https://codepen.io/CaitlinMEvans/pen/PoMgqOa">Psuedo-Classes on Code Pen</a></li>
                     <li><a href="https://codepen.io/CaitlinMEvans/pen/BaXENrq">Psuedo-Elements on Code Pen</a></li>
                     <li><a href="../wdd131/week03/responsive-images.html" target="_blank"></a>Responsive Images</li>
+                    <li><a href="../wdd131/week03/place.html" target="_blank"></a>Discover Ireland</li>
                 </ul>
             </aside>
         </main>
