--- a/week03/place.html
+++ b/week03/place.html
@@ -18,9 +18,9 @@
     <main>
         <div class="hero">
             <picture>
-                <source srcset="images/landscape1-large.webp" media="(min-width: 1000px)">
-                <source srcset="images/landscape1-medium.webp" media="(min-width: 500px)">
-                <img id="rotating-image" src="images/landscape1-small.webp" alt="A beautiful landscape in Ireland" width="1500" height="750">
+                <source srcset="images/landscape2-large.webp" media="(min-width: 1000px)">
+                <source srcset="images/landscape2-medium.webp" media="(min-width: 500px)">
+                <img id="rotating-image" src="images/landscape2-small.webp" alt="A stunning view of the Cliffs of Moher in Ireland" width="1500" height="750">
             </picture>
         </div>
         <section class="data">
