--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                     <li><a href="../wdd131/week03/design.html" target="_blank">Design</a></li>
                     <li><a href="https://codepen.io/CaitlinMEvans/pen/PoMgqOa">Psuedo-Classes on Code Pen</a></li>
                     <li><a href="https://codepen.io/CaitlinMEvans/pen/BaXENrq">Psuedo-Elements on Code Pen</a></li>
-                    <li><a href="../wdd131/week03/responsive-images.html" target="_blank"></a>Responsive Images</li>
-                    <li><a href="../wdd131/week03/place.html" target="_blank"></a>Discover Ireland</li>
+                    <li><a href="../wdd131/week03/responsive-images.html" target="_blank">Responsive Images</a></li>
+                    <li><a href="../wdd131/week03/place.html" target="_blank">Discover Ireland</a></li>
                 </ul>
             </aside>
         </main>
