--- a/week03/place.html
+++ b/week03/place.html
@@ -49,7 +49,7 @@
     </main>
     <footer>
         <p>&copy; 2024 Caitlin Evans | Ireland</p>
-        <p>Last Modified: <span id="last-modified"></span></p>
+        <p>Date Last Modified: <span id="last-modified"></span></p>
     </footer>
 </body>
 </html>
