--- a/week03/place.html
+++ b/week03/place.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Discover the beauty of Ireland with stunning landscapes, data insights, and current weather conditions.">
+    <meta name="author" content="Caitlin Evans">
     <title>Discover Ireland</title>
     <link rel="stylesheet" href="styles/place.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
