--- a/place.html
+++ b/place.html
@@ -38,7 +38,7 @@
             </ul>
         </section>
         <section class="weather">
-            <h2>Weather <span class="weather-icon"><img src="/images/weather.svg.svg" alt="Weather icon"></span></h2>
+            <h2>Weather <span class="weather-icon"><img src="images/weather.svg.svg" alt="Weather icon"></span></h2>
             <ul>
                 <li><strong>Temperature:</strong> 10 °C</li>
                 <li><strong>Conditions:</strong> Partly Cloudy</li>
