--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                     <li><a href="../wdd131/week03/responsive-images.html" target="_blank">Responsive Images</a></li>
                     <li><a href="../wdd131/week03/place.html" target="_blank">Discover Ireland</a></li>
                 </ul>
+                <h4>Week 04</h4>
+                <ul>
+                    <li><a href="../wdd131/week03/design.html" target="_blank">Feature Table</a></li>
+                </ul>
             </aside>
         </main>
         <footer>
