--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </ul>
                 <h4>Week 04</h4>
                 <ul>
-                    <li><a href="../wdd131/week03/design.html" target="_blank">Feature Table</a></li>
+                    <li><a href="../wdd131/week04/table.html" target="_blank">Feature Table</a></li>
                 </ul>
             </aside>
         </main>
