lazy loading activity

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                 <h4>Week 04</h4>
                 <ul>
                     <li><a href="../wdd131/week04/table.html" target="_blank">Feature Table</a></li>
+                    <li><a href="../wdd131/week04/lazyloading.html" target="_blank">Lazy Loading</a></li>
                 </ul>
             </aside>
         </main>
