--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                 <ul>
                     <li><a href="../wdd131/week04/table.html" target="_blank">Feature Table</a></li>
                     <li><a href="../wdd131/week04/lazyloading.html" target="_blank">Lazy Loading</a></li>
+                    <li><a href="../wdd131/week04/filtered-temples.html" target="_blank">Filtered Temples</a></li>
                 </ul>
             </aside>
         </main>
