fixing from week2 directory to main directory

--- a/temples.html
+++ b/temples.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
     <script defer src="../scripts/getdates.js"></script>
-    <script defer src="/week02/scripts/temples.js"></script>
+    <script defer src="/scripts/temples.js"></script>
   </head>
   <body>
     <div class="container">
