--- a/temples.html
+++ b/temples.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Having this in the weeok02 direcotry caused issues for the eval tool. submit both links for credit.. -->
+<!-- Having this in the weeok02 direcotry caused issues for the eval tool. recreated in main direcotry. submit both links for credit.. -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap"
       rel="stylesheet"
     />
-    <script defer src="../scripts/getdates.js"></script>
+    <script defer src="/scripts/getdates.js"></script>
     <script defer src="/scripts/temples.js"></script>
   </head>
   <body>
@@ -40,87 +40,51 @@
         <h2>My Favorite Temples</h2>
         <div class="temple-grid">
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img
-              src="../wdd130/images/payson-temple.jpg"
-              alt="Payson Utah Temple"
-            />
+            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
         </div>
