--- a/temples.html
+++ b/temples.html
@@ -40,51 +40,51 @@
         <h2>My Favorite Temples</h2>
         <div class="temple-grid">
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
-            <img src="../images/payson-temple.jpg" alt="Payson Utah Temple" />
+            <img src="/images/payson-temple.jpg" alt="Payson Utah Temple" />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
         </div>
