--- a/temples.html
+++ b/temples.html
@@ -1,5 +1,5 @@
+<!-- Having this in the weeok02 direcotry caused issues for the eval tool. submit both links for credit.. -->
 <!DOCTYPE html>
-<!-- Having this in the weeok02 direcotry caused issues for the eval tool. recreated in main direcotry. submit both links for credit.. -->
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -18,8 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/scripts/getdates.js"></script>
-    <script defer src="/scripts/temples.js"></script>
+    <script defer src="../scripts/getdates.js"></script>
+    <script defer src="/week02/scripts/temples.js"></script>
   </head>
   <body>
     <div class="container">
@@ -41,84 +41,84 @@
         <div class="temple-grid">
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
           </figure>
           <figure>
             <img
-              src="../wdd131/images/payson-temple.jpg"
+              src="../wdd130/images/payson-temple.jpg"
               alt="Payson Utah Temple"
             />
             <figcaption>Payson Utah Temple</figcaption>
