directory fix for audit rubric

--- a/temples.html
+++ b/temples.html
@@ -18,8 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap"
       rel="stylesheet"
     />
-    <script defer src="../scripts/getdates.js"></script>
-    <script defer src="/week02/scripts/temples.js"></script>
+    <script defer src="../wdd131/scripts/getdates.js"></script>
+    <script defer src="../wdd131/scripts/temples.js"></script>
   </head>
   <body>
     <div class="container">
