--- a/place.html
+++ b/place.html
@@ -9,14 +9,14 @@
     />
     <meta name="author" content="Caitlin Evans" />
     <title>Discover Ireland</title>
-    <link rel="stylesheet" href="../wdd131/styles/place.css" />
+    <link rel="stylesheet" href="styles/place.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap"
       rel="stylesheet"
     />
-    <script defer src="../wdd131/scripts/place.js"></script>
+    <script defer src="/scripts/place.js"></script>
   </head>
   <body>
     <header>
@@ -56,7 +56,7 @@
         </ul>
       </section>
       <section class="weather">
-        <h2>Weather</h2>
+        <h2>Weather <span class="weather-icon">⛅</span></h2>
         <ul>
           <li><strong>Temperature:</strong> 10 °C</li>
           <li><strong>Conditions:</strong> Partly Cloudy</li>
