--- a/place.html
+++ b/place.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&family=Lora:ital,wght@0,400;1,400&display=swap"
       rel="stylesheet"
     />
-    <script defer src="/scripts/place.js"></script>
+    <script defer src="scripts/place.js"></script>
   </head>
   <body>
     <header>
