--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -75,6 +75,19 @@
               <li>What therapy services are available near me?</li>
               <li>Are there options for online vs. in-person therapy?</li>
             </ul>
+            <h3>Color Palette:</h3>
+            <img
+              src="images/NVT_colorScheme.png"
+              width="400"
+              alt="Business Color Scheme"
+            />
+            <h3>Fonts to be Used:</h3>
+            <img
+              id="logo"
+              src="images/NVT_fonts.png"
+              width="400"
+              alt="Fonts Used"
+            />
           </section>
         </div>
         <aside>
