--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;1,400&family=PT+Sans:wght@400;700&family=Delius&display=swap"
       rel="stylesheet"
     />
-    <script defer src="scripts/getdates.js"></script>
+    <script defer src="../scripts/getdates.js"></script>
   </head>
   <body>
     <div class="container">
@@ -148,6 +148,7 @@
         <p>
           &copy; <span id="copyright-year"></span> Caitlin Evans | Utah, USA
         </p>
+        <p>Date Last Modified: <span id="last-modified"></span></p>
       </footer>
     </div>
   </body>
